--- a/2-BilgisayarGörüşüneGiriş/2-CNNWorkflow.ipynb
+++ b/2-BilgisayarGörüşüneGiriş/2-CNNWorkflow.ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "0-HelloWorld.ipynb",
+      "name": "0-HelloWorld-tr.ipynb",
       "provenance": []
     },
     "kernelspec": {
@@ -15,11 +15,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "NgGTWngR9-Ym",
+        "colab_type": "text"
+      },
+      "source": [
+        "# 👓 Bilgisayar Akışı Genel Akışı\n",
+        "1. Gerekli kütüphaneleri ve veri kümelerini _import_ et\n",
+        "2. Veri hazırla\n",
+        "  - Filtreler uygula, veri normalizasyonu yap vs.\n",
+        "3. Modelini tasarla (veya algoritmanı 🤓)\n",
+        "4. Modelini bir _framework_ kullanarak emplemente et\n",
+        "5. Eğitimi başlat\n",
+        "6. Modeli değerlendir\n",
+        "  - Kötü çalışırsa 2'ye git\n",
+        "\n",
+        "Kısacası: Fikir ➡ Kod ➡ Deney ➡ Fikir 🔁 "
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "jnUrQ6tMSPDa",
         "colab_type": "text"
       },
       "source": [
-        "## 🚙 Importing libraries, data sets, required files and modules"
+        "## 🚙 Gerekli kütüphaneleri ve veri kümelerini import etme"
       ]
     },
     {
@@ -61,8 +81,8 @@
         "colab_type": "text"
       },
       "source": [
-        "## ⏬ Data Loading\n",
-        "> 🎈 MNIST dataset is already splitted "
+        "## ⏬ Veriyi İndirme\n",
+        "> 🎈 MNIST veri seti ayrıştırılmış gelmekte "
       ]
     },
     {
@@ -86,7 +106,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## 👩‍🔧 Data Preparation (pre-processing)"
+        "## 👩‍🔧 Veri Hazırlama (pre-processing)"
       ]
     },
     {
@@ -111,7 +131,7 @@
         "colab_type": "text"
       },
       "source": [
-        "## 👩‍💻 Model Designing"
+        "## 👩‍💻 Modeli Tasarlama"
       ]
     },
     {
@@ -121,9 +141,9 @@
         "colab_type": "text"
       },
       "source": [
-        "### 🧱 Make layers design\n",
-        "- Number of layers and number of units in each layer\n",
-        "- Activation function of each layer"
+        "### 🧱 Katmanlar Tasarlama\n",
+        "- Katman sayısı ve her katmandaki birim sayısı\n",
+        "- Her katmanın aktivasyon fonksiyonu"
       ]
     },
     {
@@ -151,7 +171,7 @@
         "colab_type": "text"
       },
       "source": [
-        "### 🚀 Implement your design"
+        "### 🚀 Tasarımı Emplemente Etme"
       ]
     },
     {
@@ -178,8 +198,8 @@
         "colab_type": "text"
       },
       "source": [
-        "## 🤓 Training\n",
-        "- Keras .fit() [details](https://keras.io/models/model/#fit)"
+        "## 🤓 Eğitim\n",
+        "- Keras .fit() [ayrıntılar](https://keras.io/models/model/#fit)"
       ]
     },
     {
@@ -187,16 +207,16 @@
       "metadata": {
         "id": "gXnhGIKUWmgZ",
         "colab_type": "code",
+        "outputId": "9a82f5b7-6aaf-4f7a-a72d-220a9ca92139",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 391
-        },
-        "outputId": "9a82f5b7-6aaf-4f7a-a72d-220a9ca92139"
+        }
       },
       "source": [
         "model.fit(X_train, y_train, epochs=10)"
       ],
-      "execution_count": 27,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -246,8 +266,8 @@
         "colab_type": "text"
       },
       "source": [
-        "## 👮‍♀️ Evaluate the model\n",
-        "- Keras .evaluate() [details](https://keras.io/models/model/#evaluate)"
+        "## 👮‍♀️ Modeli Değerlendirme\n",
+        "- Keras .evaluate() [ayrıntılar](https://keras.io/models/model/#evaluate)"
       ]
     },
     {
@@ -255,18 +275,18 @@
       "metadata": {
         "id": "HwTv2-TkXW8f",
         "colab_type": "code",
+        "outputId": "b269957c-81b9-43fb-d319-200475d52887",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
-        },
-        "outputId": "b269957c-81b9-43fb-d319-200475d52887"
+        }
       },
       "source": [
         "evaluation = model.evaluate(X_test, y_test)\n",
         "print('Loss', evaluation[0])\n",
         "print('Accuracy', evaluation[1])"
       ],
-      "execution_count": 33,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
